# w32t-client

./: .gitignore  CMakeLists.txt  README.md  client.cpp  ms-w32t.idl  rpc.cpp  rpc.hpp  w32t.cpp  w32t.hpp
cmake/: midl.cmake  ms-dtyp.h.in
